--- a/Reto1/index.html
+++ b/Reto1/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Energías Limpias</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
         <section>
             <h2>¿Qué son las energías limpias?</h2>
             <p>Las energías limpias son aquellas que se obtienen de fuentes renovables y que no generan contaminación durante su uso. Algunas de estas fuentes incluyen la energía solar, eólica, hidroeléctrica, y la energía generada a partir del hidrógeno verde.</p>
-            <img src="parque-eolico.jpg" alt="Parque Eólico">
+            <img src="img/parque-eolico.jpg" alt="Parque Eólico">
         </section>
 
         <section>
@@ -30,8 +32,8 @@
     </main>
     
     <footer>
-        <p>Creado por Julián Giraldo 
-            <a href="mailto:julian.giraldoo@udea.edu.co">✉️ Contacto</a>
+        <p>Creado por Paulina Diaz 
+            <a href="paulina.diazb@udea.edu.co">✉️ Contacto</a>
         </p>
     </footer>
 </body>
