--- a/Reto2/index.html
+++ b/Reto2/index.html
@@ -31,8 +31,8 @@
     </main>
     
     <footer>
-        <p>Creado por Julián Giraldo 
-            <a href="mailto:julian.giraldoo@udea.edu.co" class="email">✉️ Contacto</a> para Talento Tech 2025
+        <p>Creado por Paulina Diaz 
+            <a href="mailto:paulina.diazb@udea.edu.co" class="email">✉️ Contacto>
         </p>
     </footer>
 </body>
