--- a/Reto3/index.html
+++ b/Reto3/index.html
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>Creado por Julián Giraldo <a href="mailto:julian.giraldoo@udea.edu.co" class="correo">julian.giraldoo@udea.edu.co</a> - Bootcamp Talento Tech Region 2 - 2025</p>
+        <p>Creado por Julián Giraldo <a href="paulina.diazb@udea.edu.co" class="correo">paulina.diazb@udea.edu.co</a> - Bootcamp Talento Tech Region 2 - 2025</p>
     </footer>
     
 </body>
