--- a/Reto4/index.html
+++ b/Reto4/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <footer class="footer">
-        <p>Creado por Julián Giraldo <a href="mailto:julian.giraldoo@udea.edu.co" class="email">julian.giraldoo@udea.edu.co</a> - Bootcamp Talento Tech Region 2 - 2025</p>
+        <p>Creado por Paulina Diaz <a href="mailto:paulina.diazb@udea.edu.co" class="email">paulina.diazb@udea.edu.co</a> 2025</p>
     </footer>
 </body>
 </html>
