--- a/Reto8_Pre3/index.html
+++ b/Reto8_Pre3/index.html
@@ -15,9 +15,11 @@
     <div class="container">
         <input type="number" id="number1" required>
         <input type="number" id="number2" required>
+        <br>
         <button id="addButton">Sumar</button>
-        <div id="result"></div>
+        <div id="resultText"></div>
     </div>
 
+    <script src="js/scripts.js"></script>
 </body>
 </html>
