--- a/Proyecto/Energía Bogotá/Energia_bogota.html
+++ b/Proyecto/Energía Bogotá/Energia_bogota.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-  <header>
-    <h1>Energía Solar en Bogotá (MW)</h1>
+  <header class="header">
+    <h1>Energía Renovable en Bogotá (MW)</h1>
   </header>
  
   <nav class="'navbar">
@@ -25,10 +25,11 @@
     </section>
 
     <section class="grafico">
-       <canvas id="bogotaChart" width="300" height="400"></canvas>
+       <canvas id="bogotaChart" ></canvas>
     </section>
   </div>
 
+  <footer>Contacto</footer>
  
   <script src="js/bogotaChart.js"></script>
 </body>
